2007-02-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: display of the gameswf_logo and process of loading
	of a swf-file is added
	
2007-02-06  Vitaly Alexeev <tishka92@yahoo.com>

	* base/container.h: added operator[] into class hash
	* gameswf/gameswf.h: added typedef used for audio of video
	* gameswf/gameswf_sound_handler_sdl.h: added new h-file for
	gameswf_sound_handler_sdl.cpp
	* gameswf/gameswf_sound_handler_sdl.cpp: totally rewritten.
	Uses FFMPEG for MP3 audio. Can process audio of video stream.
	* gameswf/gameswf_test_ogl.cpp: a bit cleanup
	* gameswf/win32/VC8/gameswf.vcproj: added gameswf_sound_handler.h
	

2007-02-06  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_types.h: The new version of SDL has own
	typedefs(Sint8, Uint8, ..)
	* gameswf/win32/VC8/gameswf.vcproj: added VC8 project file


2005-06-06  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_test_ogl.cpp (runThread): New SDL_Thread to
	handle looking for network data, and if there is data, push an SDL
	User Event on the event queue.
	(main): Add new -e option to enable a threaded event based main
	loop or the existing polling one. Pass SDL_INIT_EVENTTHREAD to
	SDL_Init() on all platforms but win32.
	(runThread): Use the global variable to pass to select().
	* gameswf/gameswf_xmlsocket.{h,cpp}: Add checkSockets(), which
	checks to see if there is data waiting in a socket. Add a temporay
	global variable to pass the file descriptor from ::connect() up to
	the main loop.
	* gameswf/gameswf_xml.{h,cpp} (memadjust): Adjust a byte count to
	be aligned on the proper boundary. (word size for now) Use only
	adjusted memory for all dynamic memory allocation sizes.
	* autogen.h: Remove bogus warning message and amke it say
	something intelligent.

2005-05-28  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_test_ogl.cpp (main): Move the setting of the LOD
	BIAS up a few lines, as to be effective, it has to be executed